--- a/index.html
+++ b/index.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anotações</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Estilo personalizado */
+        body {
+            background-color: #f8f9fa;
+        }
+        .card-container {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .card-body {
+            padding: 1.5rem;
+        }
+        .anotacao-item {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            padding: 15px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .anotacao-text {
+            font-size: 1rem;
+            color: #333;
+            margin-right: 10px;
+        }
+        .delete-btn {
+            background: none;
+            border: none;
+            color: #dc3545;
+            font-size: 1.2rem;
+            cursor: pointer;
+        }
+        .delete-btn:hover {
+            color: #bd2130;
+        }
+    </style>
 </head>
 <body>
-    <h3>Anotações</h3>
-    
+
+    <div class="container mt-5 card-container">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center">Anotações</h1>
+                <form id="formulario" onsubmit="cadastrar(event)">
+                    <div class="mb-3">
+                        <input type="text" class="form-control" placeholder="Digite suas anotações aqui" id="anotacaoText" required>
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary w-100">Cadastrar</button>
+                </form>
+            </div>
+        </div>
+
+        <!-- Exibição das anotações -->
+        <div class="mt-4" id="anotaçõesGravadas">
+            <!-- Anotações serão renderizadas aqui -->
+        </div>
+    </div>
+
+    <!-- Script do Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
